--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "react-router-dom": "^6.25.1",
+    "react-hook-form": "^7.52.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
